MegaZone/Project/ALB-EKS/ingress https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-alb"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:986356328007:certificate/36281300-34ab-4e06-94db-bd5a346987ac
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "svc1-webmain"
                port:
                  number: 9001
          - path: /about
            pathType: Prefix
            backend:
              service:
                name: "svc2-webabout"
                port:
                  number: 9002
          - path: /event
            pathType: Prefix
            backend:
              service:
                name: "svc3-webevent"
                port:
                  number: 9003
          - path: /schedule
            pathType: Prefix
            backend:
              service:
                name: "svc4-webschedule"
                port:
                  number: 9004
          - path: /speakers
            pathType: Prefix
            backend:
              service:
                name: "svc5-webspeakers"
                port:
                  number: 9005
